--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -92,7 +92,7 @@
 \textbf{Texas Tech University}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics} \hfill Jun 2022 (expected)\\
 \begin{itemize}[noitemsep,nolistsep]
-	\item Relevant Coursework: Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
+	\item Relevant Coursework: Casual Inference (R, Stata), Economic Optimization (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
 \end{itemize}
 \vspace{1mm}
 \textbf{CEVRO Institute}\hfill Prague, Czech Republic\\
@@ -128,9 +128,6 @@
 
 \textbf{Free Market Institute} \hfill Lubbock, TX\\
 \textit{Research Assistant} \hfill Aug 2020 --- Present \\
-\begin{itemize}[noitemsep,nolistsep]
-	\item Researched and collected data to perform regressions related to the labor force, education spending, and pension reform
-\end{itemize}
 \vspace{1mm}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
@@ -153,21 +150,20 @@
 \vspace{2mm}
 
 %==== Professional and Academic Development ====%
-\header{Professional and Academic Development}
+\header{Professional and Academic Development} 
+\textbf{State Policy Network Generation Liberty Fellow} \hfill Colorado Springs, CO | Oct 2019 \\
 \vspace{1mm}
-
-\textbf{Institute for Humane Studies and FSU} \hfill Tallahassee, FL: Aug 2018\\
-One-day seminar that discussed the nature of social and natural sciences and the differences in epistemological and methodological approaches \\
+\textbf{Epistemological and Methodological Approaches in Science} \hfill Tallahassee, FL | Aug 2018\\
 \vspace{1mm}
-\textbf{Freidrich Naumann Stiftung and IES Europe} \hfill Gummersbach, Germany: Jul 2018\\
-Week-long seminar on governmental institutions, political philosophy, market structures, civil and criminal law systems, antitrust laws, and international aid\\
-\vspace{2mm}
+\textbf{Freidrich Naumann Stiftung Seminar} \hfill Gummersbach, Germany | Jul 2018\\
+\vspace{1mm}
+\textbf{European Journalism Institute} \hfill Prague, Czech Republic | Jul 2018\\
 
 %==== Skills ====%
 \header{Skills}
 \vspace{1mm}
 
-Technical Languages: \LaTeX, HTML5, CSS, SQL\\
+Technical Languages: SAS, R, Stata, Python , HTML5, CSS, \LaTeX\\
 
 
 \end{document}
