--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -19,12 +19,7 @@
     \pagestyle{empty}
     \raggedright
 
-    %\renewcommand{\encodingdefault}{cg}
-%\renewcommand{\rmdefault}{lgrcmr}
-
 \def\bull{\vrule height 0.8ex width .7ex depth -.1ex }
-
-% DEFINITIONS FOR RESUME %%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\area} [2] {
     \vspace*{-9pt}
@@ -83,14 +78,14 @@
 \vspace*{-10pt}
 \begin{center}
 	{\Huge \scshape \textbf{{Don Lim}}}\\
-	Lubbock, TX --- \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} --- (806) 317-7937\\
+	\href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | \href{https://donlim93.github.io/}{donlim93.github.io} | (806) 317-7937\\
 \end{center}
 
 %==== Education ====%
 \header{Education}
 \vspace{1mm}
 \textbf{Texas Tech University}\hfill Lubbock, Texas\\
-\textit{M.S. Agricultural and Applied Economics} \hfill Jun 2022 (expected)\\
+\textit{M.S. Agricultural and Applied Economics} \hfill Apr 2022 (expected)\\
 \begin{itemize}[noitemsep,nolistsep]
 	\item Relevant Coursework: Casual Inference (R, Stata), Economic Optimization (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
 \end{itemize}
