--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -87,7 +87,7 @@
 \textbf{Texas Tech University}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics} \hfill Apr 2022 (expected)\\
 \begin{itemize}[noitemsep,nolistsep]
-	\item Relevant Coursework: Casual Inference (R, Stata), Economic Optimization (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
+	\item Relevant Coursework: Casual Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
 \end{itemize}
 \vspace{1mm}
 \textbf{CEVRO Institute}\hfill Prague, Czech Republic\\
@@ -128,9 +128,9 @@
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
 \begin{itemize}[noitemsep,nolistsep]
-	\item Researched and collected data to perform regressions related to the labor force, education spending, and pension reform
+	\item Collected and performed regressions on data related to the labor force, education spending, and pension reform
 	\item Created graphical visualizations featuring Pennsylvania’s yearly expenditures and tax policies
-	\item Wrote and edited two publications per week related to Pennsylvania budget, school choice, and state revenue and expenditures
+	\item Wrote and edited two publications per week related to Pennsylvania's budget, school choice, and revenue and expenditures
 	\item Responded to email inquiries relating to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 \vspace{1mm}
@@ -140,7 +140,6 @@
 	\item Collected and analyzed datasets for national education administrative spending, per pupil spending, national subsidies and grants, and international large-scale assessments (PISA and TIMSS)
 	\item Wrote reports and summaries from Capitol Hill briefings on foreign affairs, trade, monetary, and education policies
 	\item Produced over 200 social media posts on Facebook and Twitter for HumanProgress.org, Freedom in the 50 States, CatoPress, and Cato Center for Educational Freedom
-	\item Distributed print material Cato Policy Analysis, news media, magazines, and policy reports
 \end{itemize}
 \vspace{2mm}
 
@@ -158,7 +157,8 @@
 \header{Skills}
 \vspace{1mm}
 
-Technical Languages: SAS, R, Stata, Python , HTML5, CSS, \LaTeX\\
-
+Technical languages: SAS, R, STATA, Python, HTML5, CSS, \LaTeX \\
+\vspace{1mm}
+Econometric techniques: OLS, difference-in-difference (DID), two-stage staggered DID, propensity score matching, synthetic control, regression discontinuity design, event study
 
 \end{document}
