--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -1,9 +1,10 @@
-\documentclass[a4paper]{article}
+\documentclass[a4paper,11pt]{article}
     \usepackage{fullpage}
     \usepackage{amsmath}
     \usepackage{amssymb}
     \usepackage{textcomp}
     \usepackage{enumitem}
+    \usepackage{mathptmx}
     \usepackage{hyperref}
     \usepackage{xcolor}
     \hypersetup{
@@ -14,7 +15,7 @@
     }
     \usepackage[utf8]{inputenc}
     \usepackage[T1]{fontenc}
-    \usepackage[margin=1in]{geometry}
+    \usepackage[margin=0.8in]{geometry}
     \textheight=10in
     \pagestyle{empty}
     \raggedright
@@ -78,62 +79,61 @@
 \vspace*{-10pt}
 \begin{center}
 	{\Huge \scshape \textbf{{Don Lim}}}\\
-	\href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | \href{https://donlim93.github.io/}{donlim93.github.io} | (806) 317-7937\\
+	\href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{donlim93.github.io} \\
 \end{center}
 
 %==== Education ====%
 \header{Education}
 \vspace{1mm}
-\textbf{Texas Tech University}\hfill Lubbock, Texas\\
+
+\textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics} \hfill Apr 2022 (expected)\\
 \begin{itemize}[noitemsep,nolistsep]
 	\item Relevant Coursework: Casual Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
 \end{itemize}
 \vspace{1mm}
-\textbf{CEVRO Institute}\hfill Prague, Czech Republic\\
+\textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill Jun 2019\\
 \begin{itemize}[noitemsep,nolistsep]
-	\item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition for Excellence Scholarship}
+	\item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition Excellence Scholarship}
 \end{itemize}
 \vspace{1mm}
-\textbf{University of Michigan}\hfill Ann Arbor, MI\\
+\textbf{University of Michigan College of Literature, Science, and the Arts}\hfill Ann Arbor, MI\\
 \textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill Apr 2016\\
 \vspace{2mm}
 
-%==== Research ====%
-\header{Research}
+%==== Certificates ====%
+\header{Certificates}
 \vspace{1mm}
 
-\textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
-\textit{E.C. Harwood Visiting Research Fellow} \hfill Dec 2018 --- May 2019\\
-\begin{itemize}[noitemsep,nolistsep]
-	\item Continued research on the economic analysis of open source development
-\end{itemize}
-\vspace{1mm}
-\textbf{Texas Tech University} \hfill Lubbock, TX\\
-\textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
-\begin{itemize}[noitemsep,nolistsep]
-	\item Applied Ostrom's polycentric and CPR approach, Hayek's theory of tacit and dispersed knowledge, and Kirzner's entrepreneurial model to the economic analysis of open source development
-\end{itemize}
+Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill Dec 2021
 \vspace{2mm}
 
 %==== Experience ====%
-\header{Work Experience}
+\header{Work and Research Experience}
 \vspace{1mm}
 
 \textbf{Free Market Institute} \hfill Lubbock, TX\\
 \textit{Research Assistant} \hfill Aug 2020 --- Present \\
 \vspace{1mm}
 
+\textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
+\textit{E.C. Harwood Visiting Research Fellow} \hfill Dec 2018 --- May 2019\\
+\vspace{1mm}
+
+\textbf{Texas Tech University} \hfill Lubbock, TX\\
+\textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
+\vspace{1mm}
+
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
 \begin{itemize}[noitemsep,nolistsep]
-	\item Collected and performed regressions on data related to the labor force, education spending, and pension reform
-	\item Created graphical visualizations featuring Pennsylvania’s yearly expenditures and tax policies
+	\item Created graphical visualizations on Pennsylvania’s yearly expenditures and tax policies
 	\item Wrote and edited two publications per week related to Pennsylvania's budget, school choice, and revenue and expenditures
 	\item Responded to email inquiries relating to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 \vspace{1mm}
+
 \textbf{Cato Institute} \hfill Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill Sep 2016 --- Dec 2016\\
 \begin{itemize}[noitemsep,nolistsep]
@@ -145,20 +145,24 @@
 
 %==== Professional and Academic Development ====%
 \header{Professional and Academic Development} 
-\textbf{State Policy Network Generation Liberty Fellow} \hfill Colorado Springs, CO | Oct 2019 \\
 \vspace{1mm}
-\textbf{Epistemological and Methodological Approaches in Science} \hfill Tallahassee, FL | Aug 2018\\
+NOUS Young Affiliates Program \hfill Online | Oct 2020 --- Present \\
 \vspace{1mm}
-\textbf{Freidrich Naumann Stiftung Seminar} \hfill Gummersbach, Germany | Jul 2018\\
+State Policy Network Generation Liberty Fellow \hfill Colorado Springs, CO | Oct 2019 \\
 \vspace{1mm}
-\textbf{European Journalism Institute} \hfill Prague, Czech Republic | Jul 2018\\
+Epistemological and Methodological Approaches in Science \hfill Tallahassee, FL | Aug 2018\\
+\vspace{1mm}
+Freidrich Naumann Stiftung Seminar \hfill Gummersbach, Germany | Jul 2018\\
+\vspace{1mm}
+European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018
+\vspace{2mm}
 
 %==== Skills ====%
 \header{Skills}
+%vspace{1mm}
+%
+%Technical languages: SAS, R, STATA, Python, HTML5, CSS, \LaTeX \\
 \vspace{1mm}
-
-Technical languages: SAS, R, STATA, Python, HTML5, CSS, \LaTeX \\
-\vspace{1mm}
-Econometric techniques: OLS, difference-in-difference (DID), two-stage staggered DID, propensity score matching, synthetic control, regression discontinuity design, event study
+Econometric techniques: ordinary least squares (OLS), difference-in-difference (DiD), two-stage staggered DiD, propensity score matching (PSM), synthetic control, regression discontinuity design (RDD), event study, matching, two-way fixed-effects (TWFE)
 
 \end{document}
