--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -163,6 +163,6 @@ European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018
 %
 %Technical languages: SAS, R, STATA, Python, HTML5, CSS, \LaTeX \\
 \vspace{1mm}
-Econometric techniques: ordinary least squares (OLS), difference-in-difference (DiD), two-stage staggered DiD, propensity score matching (PSM), synthetic control, regression discontinuity design (RDD), event study, matching, two-way fixed-effects (TWFE)
+Econometric techniques: ordinary least squares (OLS), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, etc.), synthetic control, regression discontinuity design (RDD), event study, two-way fixed-effects (TWFE)
 
 \end{document}
