Update on resume

--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -138,7 +138,7 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill Sep 2016 --- Dec 2016\\
 \begin{itemize}[noitemsep,nolistsep]
 	\item Collected and analyzed datasets for national education administrative spending, per pupil spending, national subsidies and grants, and international large-scale assessments (PISA and TIMSS)
-	\item Wrote reports and summaries from Capitol Hill briefings on foreign affairs, trade, monetary, and education policies
+	\item Wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policies
 	\item Produced over 200 social media posts on Facebook and Twitter for HumanProgress.org, Freedom in the 50 States, CatoPress, and Cato Center for Educational Freedom
 \end{itemize}
 \vspace{2mm}
@@ -159,9 +159,10 @@ European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018
 
 %==== Skills ====%
 \header{Skills}
-%vspace{1mm}
-%
-%Technical languages: SAS, R, STATA, Python, HTML5, CSS, \LaTeX \\
+\vspace{1mm}
+
+Technical languages: SAS, R, STATA, Python, HTML5, CSS, \LaTeX \\
+
 \vspace{1mm}
 Econometric techniques: ordinary least squares (OLS), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, etc.), synthetic control, regression discontinuity design (RDD), event study, two-way fixed-effects (TWFE)
 
