--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -70,16 +70,15 @@
 }
 % END RESUME DEFINITIONS %%%%%%%%%%%%%%%%%%%%%%%
 
-    \begin{document}
+\begin{document}
 \vspace*{-40pt}
 
-    
 
 %==== Profile ====%
 \vspace*{-10pt}
 \begin{center}
-	{\Huge \scshape \textbf{{Don Lim}}}\\
-	\href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{donlim93.github.io} \\
+    {\Huge \scshape \textbf{{Don Lim}}}\\
+    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{donlim93.github.io} \\
 \end{center}
 
 %==== Education ====%
@@ -87,15 +86,15 @@
 \vspace{1mm}
 
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{M.S. Agricultural and Applied Economics} \hfill Apr 2022 (expected)\\
+\textit{M.S. Agricultural and Applied Economics} \hfill May 2022 (expected)\\
 \begin{itemize}[noitemsep,nolistsep]
-	\item Relevant Coursework: Casual Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
+    \item Relevant Coursework: Casual Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
 \end{itemize}
 \vspace{1mm}
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill Jun 2019\\
 \begin{itemize}[noitemsep,nolistsep]
-	\item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition Excellence Scholarship}
+    \item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition Excellence Scholarship}
 \end{itemize}
 \vspace{1mm}
 \textbf{University of Michigan College of Literature, Science, and the Arts}\hfill Ann Arbor, MI\\
@@ -128,23 +127,23 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
 \begin{itemize}[noitemsep,nolistsep]
-	\item Created graphical visualizations on Pennsylvania’s yearly expenditures and tax policies
-	\item Wrote and edited two publications per week related to Pennsylvania's budget, school choice, and revenue and expenditures
-	\item Responded to email inquiries relating to subsidies, right-to-work laws, and the state budget
+    \item Created graphical visualizations on Pennsylvania’s yearly expenditures and tax policies
+    \item Wrote and edited two publications per week related to Pennsylvania's budget, school choice, and revenue and expenditures
+    \item Responded to email inquiries relating to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 \vspace{1mm}
 
 \textbf{Cato Institute} \hfill Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill Sep 2016 --- Dec 2016\\
 \begin{itemize}[noitemsep,nolistsep]
-	\item Collected and analyzed datasets for national education administrative spending, per pupil spending, national subsidies and grants, and international large-scale assessments (PISA and TIMSS)
-	\item Wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policies
-	\item Produced over 200 social media posts on Facebook and Twitter for HumanProgress.org, Freedom in the 50 States, CatoPress, and Cato Center for Educational Freedom
+    \item Collected and analyzed datasets for national education administrative spending, per-pupil spending, national subsidies and grants, and international large-scale assessments (PISA and TIMSS)
+    \item Wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policies
+    \item Produced over 200 social media posts on Facebook and Twitter for HumanProgress.org, Freedom in the 50 States, CatoPress, and Cato Center for Educational Freedom
 \end{itemize}
 \vspace{2mm}
 
 %==== Professional and Academic Development ====%
-\header{Professional and Academic Development} 
+\header{Professional and Academic Development}
 \vspace{1mm}
 NOUS Young Affiliates Program \hfill Online | Oct 2020 --- Present \\
 \vspace{1mm}
