--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -4,6 +4,7 @@
     \usepackage{amssymb}
     \usepackage{textcomp}
     \usepackage{enumitem}
+    \setlist[itemize]{align=parleft,left=5pt..1.5em}
     \usepackage{mathptmx}
     \usepackage{hyperref}
     \usepackage{xcolor}
@@ -73,7 +74,6 @@
 \begin{document}
 \vspace*{-40pt}
 
-
 %==== Profile ====%
 \vspace*{-10pt}
 \begin{center}
@@ -112,7 +112,7 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 \header{Work and Research Experience}
 \vspace{1mm}
 
-\textbf{Free Market Institute} \hfill Lubbock, TX\\
+\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Research Assistant} \hfill Aug 2020 --- Present \\
 \vspace{1mm}
 
@@ -120,7 +120,7 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 \textit{E.C. Harwood Visiting Research Fellow} \hfill Dec 2018 --- May 2019\\
 \vspace{1mm}
 
-\textbf{Texas Tech University} \hfill Lubbock, TX\\
+\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
 \vspace{1mm}
 
@@ -149,7 +149,7 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 Technical languages: SAS, R, STATA, Python, HTML5, CSS, \LaTeX \\
 
 \vspace{1mm}
-Econometric techniques: ordinary least squares (OLS), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, etc.), synthetic control, regression discontinuity design (RDD), event study, two-way fixed-effects (TWFE)
+Econometric techniques: ordinary least squares (OLS), instrumental variables (IV), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study, two-way fixed-effects (TWFE)
 \vspace{2mm}
 
 %==== Professional and Academic Development ====%
