--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -16,7 +16,7 @@
     }
     \usepackage[utf8]{inputenc}
     \usepackage[T1]{fontenc}
-    \usepackage[margin=0.8in]{geometry}
+    \usepackage[margin=1in]{geometry}
     \textheight=10in
     \pagestyle{empty}
     \raggedright
@@ -83,46 +83,43 @@
 
 %==== Education ====%
 \header{Education}
-\vspace{1mm}
-
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics} \hfill May 2022 (expected)\\
 \begin{itemize}[noitemsep,nolistsep]
     \item Relevant Coursework: Casual Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
 \end{itemize}
-\vspace{1mm}
+
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill Jun 2019\\
 \begin{itemize}[noitemsep,nolistsep]
     \item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition Excellence Scholarship}
 \end{itemize}
-\vspace{1mm}
+
 \textbf{University of Michigan College of Literature, Science, and the Arts}\hfill Ann Arbor, MI\\
 \textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill Apr 2016\\
-\vspace{2mm}
 
+\vspace{1mm}
 %==== Certificates ====%
 \header{Certificates}
-\vspace{1mm}
+
 
 Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill Dec 2021
-\vspace{2mm}
 
+\vspace{1mm}
 %==== Experience ====%
 \header{Work and Research Experience}
-\vspace{1mm}
-
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Research Assistant} \hfill Aug 2020 --- Present \\
-\vspace{1mm}
+\begin{itemize}[noitemsep,nolistsep]
+    \item Edited and revised book chapters and journal articles
+    \item Collected relevant literature for journal articles
+\end{itemize}
 
 \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
 \textit{E.C. Harwood Visiting Research Fellow} \hfill Dec 2018 --- May 2019\\
-\vspace{1mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
-\vspace{1mm}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
@@ -131,7 +128,6 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
     \item Wrote and edited two publications per week related to Pennsylvania's budget, school choice, and revenue and expenditures
     \item Responded to email inquiries relating to subsidies, right-to-work laws, and the state budget
 \end{itemize}
-\vspace{1mm}
 
 \textbf{Cato Institute} \hfill Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill Sep 2016 --- Dec 2016\\
@@ -140,29 +136,25 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
     \item Wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policies
     \item Produced over 200 social media posts on Facebook and Twitter for HumanProgress.org, Freedom in the 50 States, CatoPress, and Cato Center for Educational Freedom
 \end{itemize}
-\vspace{2mm}
-
-%==== Skills ====%
-\header{Skills}
 \vspace{1mm}
-
-Technical languages: SAS, R, STATA, Python, HTML5, CSS, \LaTeX \\
-
-\vspace{1mm}
-Econometric techniques: ordinary least squares (OLS), instrumental variables (IV), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study, two-way fixed-effects (TWFE)
-\vspace{2mm}
-
 %==== Professional and Academic Development ====%
 \header{Professional and Academic Development}
-\vspace{1mm}
+
 NOUS Young Affiliates Program \hfill Online | Oct 2020 --- Present \\
-\vspace{1mm}
+
 State Policy Network Generation Liberty Fellow \hfill Colorado Springs, CO | Oct 2019 \\
-\vspace{1mm}
+
 Epistemological and Methodological Approaches in Science \hfill Tallahassee, FL | Aug 2018\\
-\vspace{1mm}
+
 Freidrich Naumann Stiftung Seminar \hfill Gummersbach, Germany | Jul 2018\\
+
+European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018 \\
+
 \vspace{1mm}
-European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018
+%==== Skills ====%
+\header{Skills}
+Technical languages: SAS, R, Stata, HTML5, CSS, \LaTeX \\
+
+Econometric techniques: ordinary least squares (OLS), instrumental variables (IV), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study, two-way fixed-effects (TWFE)
 
 \end{document}
