--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -117,9 +117,14 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 
 \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
 \textit{E.C. Harwood Visiting Research Fellow} \hfill Dec 2018 --- May 2019\\
-
+\begin{itemize}[noitemsep, nolistsep]
+    \item Continued research on master's thesis
+\end{itemize}
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
+\begin{itemize}[noitemsep, nolistsep]
+    \item Researched master's thesis: economic analysis of open source communities
+\end{itemize}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
@@ -155,6 +160,6 @@ European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018 \
 \header{Skills}
 Technical languages: SAS, R, Stata, HTML5, CSS, \LaTeX \\
 
-Econometric techniques: ordinary least squares (OLS), instrumental variables (IV), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study, two-way fixed-effects (TWFE)
+Econometric techniques: ordinary least squares (OLS), instrumental variables (IV), two-way fixed-effects (TWFE), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study
 
 \end{document}
