--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -86,7 +86,7 @@
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics} \hfill May 2022 (expected)\\
 \begin{itemize}[noitemsep,nolistsep]
-    \item Relevant Coursework: Casual Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
+    \item Relevant Coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics
 \end{itemize}
 
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
