--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -100,8 +100,7 @@
 
 \vspace{1mm}
 %==== Certificates ====%
-\header{Certificates}
-
+\header{Certification}
 
 Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill Dec 2021
 
@@ -129,7 +128,7 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
 \begin{itemize}[noitemsep,nolistsep]
-    \item Created graphical visualizations on Pennsylvania’s yearly expenditures and tax policies
+    \item Created graphical visualizations of Pennsylvania’s yearly expenditures and tax policies
     \item Wrote and edited two publications per week related to Pennsylvania's budget, school choice, and revenue and expenditures
     \item Responded to email inquiries relating to subsidies, right-to-work laws, and the state budget
 \end{itemize}
