--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -16,7 +16,7 @@
     }
     \usepackage[utf8]{inputenc}
     \usepackage[T1]{fontenc}
-    \usepackage[margin=0.7in]{geometry}
+    \usepackage[margin=1in]{geometry}
     \textheight=10in
     \pagestyle{empty}
     \raggedright
@@ -111,14 +111,12 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 \textit{Research Assistant} \hfill Aug 2020 --- Present \\
 \begin{itemize}[noitemsep,nolistsep]
     \item Edited and revised book chapters and journal articles
-    \item Collected relevant literature for journal articles
+    \item Compiled relevant literature for journal articles
 \end{itemize}
 
 \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
 \textit{E.C. Harwood Visiting Research Fellow} \hfill Dec 2018 --- May 2019\\
-\begin{itemize}[noitemsep, nolistsep]
-    \item Continued research on master's thesis
-\end{itemize}
+
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
 \begin{itemize}[noitemsep, nolistsep]
@@ -128,9 +126,9 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
 \begin{itemize}[noitemsep,nolistsep]
-    \item Created graphical visualizations of Pennsylvania’s yearly expenditures and tax policies
-    \item Wrote and edited two publications per week related to Pennsylvania's budget, school choice, and revenue and expenditures
-    \item Responded to email inquiries relating to subsidies, right-to-work laws, and the state budget
+    \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
+    \item Wrote and edited two publications per week related to Pennsylvania's budget and education policy
+    \item Responded to email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 
 \textbf{Cato Institute} \hfill Washington, D.C.\\
@@ -159,6 +157,6 @@ European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018 \
 \header{Skills}
 Technical languages: SAS, R, Stata, HTML5, CSS, \LaTeX \\
 
-Econometric techniques: ordinary least squares (OLS), instrumental variables (IV), two-way fixed-effects (TWFE), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study
+Econometric techniques: ordinary least squares (OLS), instrumental variables (IV), two-way fixed-effects (TWFE), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study, factor and cluster analysis
 
 \end{document}
