--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -155,7 +155,7 @@ European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018 \
 \vspace{1mm}
 %==== Skills ====%
 \header{Skills}
-Technical languages: SAS, R, Stata, HTML5, CSS, \LaTeX \\
+Technical languages: SAS, R (dplyr, tidyr, stringr, ggplot2), Stata, HTML5, CSS, \LaTeX \\
 
 Econometric techniques: ordinary least squares (OLS), instrumental variables (IV), two-way fixed-effects (TWFE), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study, factor and cluster analysis
 
