--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -157,6 +157,6 @@ European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018 \
 \header{Skills}
 Technical languages: SAS, R (dplyr, tidyr, stringr, ggplot2), Stata, HTML5, CSS, \LaTeX \\
 
-Econometric techniques: ordinary least squares (OLS), instrumental variables (IV), two-way fixed-effects (TWFE), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study, factor and cluster analysis
+Statistical techniques: ordinary least squares (OLS) regression, instrumental variables (IV), two-way fixed-effects (TWFE), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study, factor and cluster analysis
 
 \end{document}
