--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -120,21 +120,21 @@ Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/G
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
 \begin{itemize}[noitemsep, nolistsep]
-    \item Researched master's thesis: economic analysis of open source communities
+    \item Researched master's thesis: economic analysis of open-source communities
 \end{itemize}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
 \begin{itemize}[noitemsep,nolistsep]
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
-    \item Wrote and edited two publications per week related to Pennsylvania's budget and education policy
+    \item Wrote and edited two publications per week related to the Pennsylvania's budget and education policy
     \item Responded to email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 
 \textbf{Cato Institute} \hfill Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill Sep 2016 --- Dec 2016\\
 \begin{itemize}[noitemsep,nolistsep]
-    \item Collected and analyzed datasets for national education administrative spending, per-pupil spending, national subsidies and grants, and international large-scale assessments (PISA and TIMSS)
+    \item Collected and analyzed datasets for national education administrative spending, per-pupil spending, national subsidies and grants, and large-scale international  assessments (PISA and TIMSS)
     \item Wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policies
     \item Produced over 200 social media posts on Facebook and Twitter for HumanProgress.org, Freedom in the 50 States, CatoPress, and Cato Center for Educational Freedom
 \end{itemize}
