--- a/cv/cv causal inference/LimDon_resumeCV.tex
+++ b/cv/cv causal inference/LimDon_resumeCV.tex
@@ -84,7 +84,7 @@
 %==== Education ====%
 \header{Education}
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{M.S. Agricultural and Applied Economics}; 3.595 GPA \hfill May 2022 \\
+\textit{M.S. Agricultural and Applied Economics} \hfill May 2022 (expected)\\
 \begin{itemize}[noitemsep,nolistsep]
     \item Relevant Coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
 \end{itemize}
@@ -99,6 +99,18 @@
 \textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill Apr 2016\\
 
 \vspace{1mm}
+
+\header{Projects and Assignments in Causal Inference}
+\begin{itemize}[noitemsep,nolistsep]
+    \item Term project: \emph{Low-Fat Diet on BMI, Obesity, Overweight, Blood Pressure, and Diabetes—A Two-Stage Difference-in-Difference} --- Examined the effects of low-fat diet across countries using Gardner's method (2021) of two-stage difference-in-difference
+    \item Assignments (see \href{https://donlim93.github.io/}{website} for code and details; all assignments completed in R): 
+    \begin{itemize}[noitemsep,nolistsep]
+        \item Replicated Card \& Krueger (1993) difference-in-difference minimum wage and employment study in New Jersey and Pennsylvania
+        \item Replicated Dehejia \& Wahba (2002) propensity score matching (PSM) study on the NSW program
+        \item Replicated Abadie, Diamond \& Hainmeuller (2010) syntehtic control on the estimated effect of California's tobacco program
+        \item Replicated Lee, Moretti \& Butler (2004) regression discontinuity design on the effect of voters on the decision-making process of politicians in office
+    \end{itemize}
+\end{itemize}
 %==== Certificates ====%
 \header{Certification}
 
