New year update

--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -16,7 +16,7 @@
     }
     \usepackage[utf8]{inputenc}
     \usepackage[T1]{fontenc}
-    \usepackage[margin=1in]{geometry}
+    \usepackage[margin=0.8in]{geometry}
     \textheight=10in
     \pagestyle{empty}
     \raggedright
@@ -80,6 +80,41 @@
     {\Huge \scshape \textbf{{Don Lim}}}\\
     \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{donlim93.github.io} \\
 \end{center}
+%==== Experience ====%
+\header{Work and Research Experience}
+\textbf{DocuNav Solutions} \hfill Frisco, TX \\
+\textit{Support Engineer} \hfill June 2022 --- Present \\
+\begin{itemize}[noitemsep,nolistsep]
+    \item Troubleshooting automated workflows and forms processes; maintaining non-clustered SQL databases; internal IT support
+\end{itemize}    
+
+\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
+\textit{Research Assistant} \hfill Aug 2020 --- May 2022 \\
+\begin{itemize}[noitemsep,nolistsep]
+    \item Edited and revised book chapters and journal articles; compiled relevant literature for publications
+\end{itemize}
+
+\textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
+\textit{E.C. Harwood Visiting Research Fellow} \hfill Dec 2018 --- May 2019\\
+
+\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
+\textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
+\begin{itemize}[noitemsep, nolistsep]
+    \item Researched master's thesis: economic analysis of open-source communities
+\end{itemize}
+
+\textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
+\textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
+\begin{itemize}[noitemsep,nolistsep]
+    \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies; wrote and edited two publications per week related to the Pennsylvania's budget and education policy; responded to email inquiries related to subsidies, right-to-work laws, and the state budget
+\end{itemize}
+
+\textbf{Cato Institute} \hfill Washington, D.C.\\
+\textit{Intern Researcher at the Center for Educational Freedom} \hfill Sep 2016 --- Dec 2016\\
+\begin{itemize}[noitemsep,nolistsep]
+    \item Collected and analyzed datasets related to national education policy; wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policy; produced over 200 social media posts 
+\end{itemize}
+\vspace{1mm}
 
 %==== Education ====%
 \header{Education}
@@ -100,49 +135,19 @@
 
 \vspace{1mm}
 %==== Certificates ====%
-\header{Certification}
-
-Introduction to SQL, University of Michigan (\href{https://coursera.org/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill Dec 2021
-
-\vspace{1mm}
-%==== Experience ====%
-\header{Work and Research Experience}
-\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
-\textit{Research Assistant} \hfill Aug 2020 --- Present \\
+\header{Certifications}
 \begin{itemize}[noitemsep,nolistsep]
-    \item Edited and revised book chapters and journal articles
-    \item Compiled relevant literature for journal articles
-\end{itemize}
-
-\textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
-\textit{E.C. Harwood Visiting Research Fellow} \hfill Dec 2018 --- May 2019\\
-
-\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
-\textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
-\begin{itemize}[noitemsep, nolistsep]
-    \item Researched master's thesis: economic analysis of open-source communities
-\end{itemize}
-
-\textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
-\textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
-\begin{itemize}[noitemsep,nolistsep]
-    \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
-    \item Wrote and edited two publications per week related to the Pennsylvania's budget and education policy
-    \item Responded to email inquiries related to subsidies, right-to-work laws, and the state budget
-\end{itemize}
-
-\textbf{Cato Institute} \hfill Washington, D.C.\\
-\textit{Intern Researcher at the Center for Educational Freedom} \hfill Sep 2016 --- Dec 2016\\
-\begin{itemize}[noitemsep,nolistsep]
-    \item Collected and analyzed datasets for national education administrative spending, per-pupil spending, national subsidies and grants, and large-scale international  assessments (PISA and TIMSS)
-    \item Wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policies
-    \item Produced over 200 social media posts on Facebook and Twitter for HumanProgress.org, Freedom in the 50 States, CatoPress, and Cato Center for Educational Freedom
+    \item Applied Text Mining in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill Dec 2022
+    \item Applied Machine Learning in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill Nov 2022
+    \item Applied Plotting, Charting \& Data Representation in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill Oct 2022
+    \item Introduction to Data Science in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/UHKNPYG352ZU}{UHKNPYG352ZU}) \hfill Sep 2022
+    \item Introduction to SQL; \emph{Coursera} (\href{https://coursera.org/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill Dec 2021
 \end{itemize}
 \vspace{1mm}
 %==== Professional and Academic Development ====%
 \header{Professional and Academic Development}
 
-NOUS Young Affiliates Program \hfill Online | Oct 2020 --- Present \\
+NOUS Young Affiliates Program \hfill Online | Oct 2020 --- May 2022 \\
 
 State Policy Network Generation Liberty Fellow \hfill Colorado Springs, CO | Oct 2019 \\
 
@@ -155,8 +160,8 @@ European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018 \
 \vspace{1mm}
 %==== Skills ====%
 \header{Skills}
-Technical languages: SAS, R (dplyr, tidyr, stringr, ggplot2), Stata, HTML5, CSS, \LaTeX \\
+Technical languages: Python (regex, numpy, pandas, scipy, matplotlib, sklearn, nltk, networkx), SAS, R (dplyr, tidyr, stringr, ggplot2), Stata, HTML5, CSS, \LaTeX \\
 
-Statistical techniques: ordinary least squares (OLS) regression, instrumental variables (IV), two-way fixed-effects (TWFE), difference-in-difference (DiD), two-stage staggered DiD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, regression discontinuity design (RDD), event study, factor and cluster analysis
+Statistical techniques: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis
 
 \end{document}
